2008-08-08  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Change Stream.Read(out string, int, Encoding) to
	  Stream.Read(int, Encoding, out string) to conform to FxDG.

2008-08-08  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Add Stream.Write(byte[]) extension method.

2008-08-08  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Assert Steam.CanRead/Stream.CanWrite, as appropriate.

2008-08-08  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Add .Read() extension methods to extract a value from a stream.
	  Thanks to Bojan Rajkovic for the patch.

2008-08-08  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Remove the Stream.AsEnumerable() extension
	  method, as the semantics were incorrect.  Consider:
	    IEnumerable<byte> b = stream.AsEnumerable(); 
	    b.Skip(2).Apply(); 
	    b.Skip(2).Apply();
	  With Stream.AsEnumerable(), it would increase stream.Position by 4,
	  thus the `b.Skip()` calls are remembered.  If you use _any_ other
	  IEnumerable<T> type, the first .Skip() has no effect on the second
	  .Skip().

	  I couldn't think of a decent workaround, thus while it's "cute" the
	  semantics of a Stream-backed IEnumerable<byte> don't match the
	  semantics of other IEnumerable<byte>s, so I removed it.

	  As a replacement, we'll add Stream.Read() and Stream.Write()
	  extension methods, which will permit "cute" chaining (in the manner
	  of C++ operator<< and operator>>), e.g.
	  stream.Write(1).Write('a').Write(3.14);

2008-08-07  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: use Stream.ReadByte() instead of Stream.Read() so that things
	  behave sanely when calling .Skip() or .Take() (etc.) methods -- we don't
	  want to consume too much of the stream.

2008-08-07  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Don't allocate extra memory for the stream buffer.

2008-08-07  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Added; .AsEnumerable() extension method for System.IO.Stream.
